--- a/less/contact.less
+++ b/less/contact.less
@@ -1,38 +1,52 @@
 .navigation-for-contact {
 
-    nav {
+    .flex-justify-content-spaceAround();
+    padding: @smallPadding;
+    border: @myBorder;
+    background: -webkit-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
+    background: -moz-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
+
+
+    ul {
         display: flex;
-        justify-content: space-around;
-        padding: @smallPadding;
-        border: @myBorder;
+        justify-content: space-between;
+        padding: @mediumPadding;
+        font-size: @largeFontSize;
+        transition: transform 1s ease-in-out 0.5s;
 
-        ul {
-            display: flex;
-            justify-content: space-between;
+
+        &:hover {
+            transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
+        }
+
+        a {
             padding: @mediumPadding;
+            text-decoration: none;
+            text-transform: uppercase;
             font-size: @largeFontSize;
-            transition: transform 1s ease-in-out 0.5s;
-
-            &:hover {
-                transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
-            }
-
-            a {
-                padding: @mediumPadding;
-                text-decoration: none;
-                text-transform: uppercase;
-                font-size: @largeFontSize;
-            }
+            font-weight: 500;
         }
 
-        .logo img {
-            border-radius: 30%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 60px;
-            height: 60px;
+        @media @phone {
+            flex-direction: column;
+
         }
+
+    }
+
+    .logo img {
+        border-radius: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 60px;
+        height: 60px;
+        box-shadow: @amber 5px 5px 7px;
+    }
+
+    @media @phone {
+        flex-direction: column;
+        max-height: 42%;
     }
 
 }
