--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -32,7 +32,10 @@
             border-radius: 20%;
         }
 
-    }
+        blockquote {
+            padding: @mediumPadding;
+        }
 
+    }
 
 }
