--- a/less/header.less
+++ b/less/header.less
@@ -70,6 +70,14 @@ header {
                 margin: 0.5em;
             }
         }
+
+
+         img {
+            @media @phone{
+                width: 97%;
+            }
+        }
+        
     }
 
 }
