--- a/less/header.less
+++ b/less/header.less
@@ -91,7 +91,7 @@ header {
 
     h1 {
         -webkit-animation: pulsate 3s ease-in-out;
-        -webkit-animation-iteration-count: 15;
+        -webkit-animation-iteration-count: infinite;
         -webkit-animation-direction: alternate-reverse;
 
         // opacity: .3;
