--- a/less/header.less
+++ b/less/header.less
@@ -5,6 +5,7 @@ header {
         border: @myBorder;
         background: -webkit-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
         background: -moz-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
+        overflow: hidden;
 
 
         ul {
@@ -72,12 +73,12 @@ header {
         }
 
 
-         img {
-            @media @phone{
+        img {
+            @media @phone {
                 width: 97%;
             }
         }
-        
+
     }
 
 }
