--- a/less/about.less
+++ b/less/about.less
@@ -12,9 +12,11 @@
         padding: @mediumPadding;
         font-size: @largeFontSize;
         transition: transform 1s ease-in-out 0.5s;
+        -moz-transition: transform 1s ease-in-out 0.5s;
 
         &:hover {
             transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
+            -moz-transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
         }
 
         a {
@@ -82,16 +84,17 @@
         opacity: 0.7;
         height: auto;
         -webkit-transform: scale(1.15);
-        -ms-transform: scale(1.15);
+        -moz-transform: scale(1.15);
         transform: scale(1.15);
         -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
         transition: transform 0.5s, opacity 0.5s;
+        -moz-transition: transform 0.5s, opacity 0.5s;
     }
 
     .meal-photo img:hover {
         opacity: 1;
         -webkit-transform: scale(1.03);
-        -ms-transform: scale(1.03);
+        -moz-transform: scale(1.03);
         transform: scale(1.03);
     }
 
