--- a/less/header.less
+++ b/less/header.less
@@ -135,8 +135,8 @@ header {
 
 .sticky {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    // top: 0;
+    // left: 0;
+    width: 60.2%;
     z-index: 9999;
 }
