--- a/less/about.less
+++ b/less/about.less
@@ -103,5 +103,15 @@
         flex-direction: column;
     }
 
+}
+
+
+article {
+  padding: @bigPadding;
+
+  p {
+     padding: @mediumPadding;
+     line-height: 1.5;
+  }
 
 }
