--- a/less/contact.less
+++ b/less/contact.less
@@ -5,6 +5,7 @@
     border: @myBorder;
     background: -webkit-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
     background: -moz-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
+    overflow: hidden;
 
 
     ul {
