--- a/less/news.less
+++ b/less/news.less
@@ -52,3 +52,48 @@
 
 }
 
+
+
+
+main {
+
+    display: flex;
+    flex-direction: column;
+    width: 58%;
+
+
+    .an-article {
+
+        margin: 2%;
+        padding: @bigPadding;
+        border: @myBorder;
+        display: flex;
+        flex-direction: column;
+
+
+        h2 {
+            font-size: 2.5rem;
+        }
+
+
+        .image-container img {
+            padding: @mediumPadding;
+            width: 80%;
+        }
+
+        a {
+            text-decoration: none;
+
+        }
+
+
+        p {
+            font-size: 1.7rem;
+        }
+
+
+    }
+
+
+
+}
