--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,3 +27,8 @@
         display: flex;
         justify-content: space-between;
 }
+
+.flex-direction-column-wrap(){
+        flex-direction: column;
+        flex-wrap: wrap;
+}
