--- a/less/news.less
+++ b/less/news.less
@@ -49,18 +49,18 @@
         max-height: 42%;
     }
 
-
 }
 
 
-
-
 main {
-
+    
     display: flex;
     flex-direction: column;
-    width: 58%;
+    width: 78%;
 
+    @media @tablet {
+        width: 98%;
+    }
 
     .an-article {
 
@@ -75,15 +75,13 @@ main {
             font-size: 2.5rem;
         }
 
-
         .image-container img {
             padding: @mediumPadding;
-            width: 80%;
+            width: 85%;
         }
 
         a {
             text-decoration: none;
-
         }
 
 
@@ -91,9 +89,6 @@ main {
             font-size: 1.7rem;
         }
 
-
     }
-
-
 
 }
