--- a/less/about.less
+++ b/less/about.less
@@ -59,9 +59,13 @@
     .meals-showcase1 {
         display: flex;
 
+        @media @tablet {
+         .flex-direction-column-wrap();
+        }
+
+
         @media @phone {
-            flex-direction: column;
-            flex-wrap: wrap;
+            .flex-direction-column-wrap();
         }
     }
 
@@ -69,9 +73,12 @@
     .meals-showcase2 {
         display: flex;
 
+        @media @tablet {
+            .flex-direction-column-wrap();
+        }
+
         @media @phone {
-            flex-direction: column;
-            flex-wrap: wrap;
+            .flex-direction-column-wrap();
         }
     }
 
@@ -90,6 +97,16 @@
         -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
         transition: transform 0.5s, opacity 0.5s;
         -moz-transition: transform 0.5s, opacity 0.5s;
+
+        @media @tablet {
+            width: 95%;
+        }
+
+        @media @phone {
+            width:95%;
+    }
+
+
     }
 
     .meal-photo img:hover {
@@ -97,11 +114,15 @@
         -webkit-transform: scale(1.03);
         -moz-transform: scale(1.03);
         transform: scale(1.03);
+        
+    }
+
+    @media @tablet {
+        .flex-direction-column-wrap();
     }
 
     @media @phone {
-        flex-wrap: wrap;
-        flex-direction: column;
+        .flex-direction-column-wrap();
     }
 
 }
