--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -8,6 +8,7 @@
     .flex-justify-content-spaceAround();
     flex-wrap: wrap;
     padding: @mediumPadding;
+    background-color:@testimonial-color;
 
     @media @phone {
         flex-direction: column;
