--- a/less/about.less
+++ b/less/about.less
@@ -3,8 +3,8 @@
     .flex-justify-content-spaceAround();
     padding: @smallPadding;
     border: @myBorder;
-    background: -webkit-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
-    background: -moz-radial-gradient(bottom, ellipse, @radial-color1, @radial-color2);
+    background: -webkit-radial-gradient(bottom, ellipse, @home-color, @radial-color);
+    background: -moz-radial-gradient(bottom, ellipse, @home-color, @radial-color);
     overflow: hidden;
 
     ul {
@@ -49,7 +49,12 @@
         max-height: 42%;
     }
 
+}
 
+
+.about-the-robot {
+    background-color: @home-color;
+    padding: @mediumPadding;
 }
 
 
@@ -60,9 +65,8 @@
         display: flex;
 
         @media @tablet {
-         .flex-direction-column-wrap();
+            .flex-direction-column-wrap();
         }
-
 
         @media @phone {
             .flex-direction-column-wrap();
@@ -81,7 +85,6 @@
             .flex-direction-column-wrap();
         }
     }
-
 
     .meal-photo {
         overflow: hidden;
@@ -103,9 +106,8 @@
         }
 
         @media @phone {
-            width:95%;
-    }
-
+            width: 95%;
+        }
 
     }
 
@@ -114,7 +116,6 @@
         -webkit-transform: scale(1.03);
         -moz-transform: scale(1.03);
         transform: scale(1.03);
-        
     }
 
     @media @tablet {
@@ -130,6 +131,7 @@
 
 article {
     padding: @bigPadding;
+    background-color: @home-color;
 
     p {
         padding: @mediumPadding;
@@ -137,5 +139,3 @@ article {
     }
 
 }
-
-
