--- a/less/home.less
+++ b/less/home.less
@@ -1,4 +1,5 @@
 .home {
+    background-color:@home-color;
     display: flex;
     flex-direction: column;
     padding: @mediumPadding;
@@ -37,3 +38,7 @@
 
 
 }
+
+
+
+
