--- a/less/news.less
+++ b/less/news.less
@@ -3,8 +3,8 @@
     .flex-justify-content-spaceAround();
     padding: @smallPadding;
     border: @myBorder;
-    background: -webkit-radial-gradient(bottom, ellipse, @home-color, @radial-color);
-    background: -moz-radial-gradient(bottom, ellipse, @home-color, @radial-color);
+    background: -webkit-radial-gradient(bottom, ellipse, @lighter-black, @radial-color);
+    background: -moz-radial-gradient(bottom, ellipse, @lighter-black, @radial-color);
     overflow: hidden;
 
     ul {
@@ -26,6 +26,7 @@
             text-transform: uppercase;
             font-size: @largeFontSize;
             font-weight: 500;
+            color: @home-color;
         }
 
         @media @phone {
