--- a/less/about.less
+++ b/less/about.less
@@ -12,13 +12,13 @@
         justify-content: space-between;
         padding: @mediumPadding;
         font-size: @largeFontSize;
-        transition: transform 1s ease-in-out 0.5s;
-        -moz-transition: transform 1s ease-in-out 0.5s;
+        // transition: transform 1s ease-in-out 0.5s;
+        // -moz-transition: transform 1s ease-in-out 0.5s;
 
-        &:hover {
-            transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
-            -moz-transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
-        }
+        // &:hover {
+        //     transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
+        //     -moz-transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
+        // }
 
         a {
             padding: @mediumPadding;
@@ -27,6 +27,11 @@
             font-size: @largeFontSize;
             font-weight: 500;
             color: @home-color;
+            
+            &:hover {
+                color:@pastel-orange;
+                transform: scale(1.1);
+            }
         }
 
         @media @phone {
